// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rendered output > split > a modified line word-diffs against its counterpart 1`] = `"[removed 1] {removed "const greeting = \\"Hello\\";" <kwd oper str str.modified str>} [added 1] {added "const greeting = \\"Goodbye\\";" <kwd oper str str.modified str>}"`;

exports[`rendered output > split > a multi-line replacement expands to the longer side 1`] = `
"[removed 1] {removed "one" <modified>} [added 1] {added "ONE" <modified>}
[removed 2] {removed "two"} [disabled] {disabled —}
[removed 3] {removed "three"} [disabled] {disabled —}"
`;

exports[`rendered output > split > a removal pads the other side 1`] = `
"[equal 1] {equal "a"} [equal 1] {equal "a"}
[removed 2] {removed "b"} [disabled] {disabled —}"
`;

exports[`rendered output > split > an addition pads the other side 1`] = `
"[equal 1] {equal "a"} [equal 1] {equal "a"}
[disabled] {disabled —} [added 2] {added "b"}"
`;

exports[`rendered output > split > collapsed runs are marked with a hunk header 1`] = `
"[fold] {hunk @@ -1,9 +1,9 @@} [fold] {hunk @@ -1,9 +1,9 @@}
[removed 10] {removed "OLD" <modified>} [added 10] {added "NEW" <modified>}"
`;

exports[`rendered output > split > collapsed runs are marked with dots 1`] = `
"[fold] {fold —} [fold] {fold —}
[removed 10] {removed "OLD" <modified>} [added 10] {added "NEW" <modified>}"
`;

exports[`rendered output > split > identical input still renders every line 1`] = `
"[equal 1] {equal "a"} [equal 1] {equal "a"}
[equal 2] {equal "b"} [equal 2] {equal "b"}"
`;

exports[`rendered output > split > markup in content is escaped, not rendered 1`] = `"[removed 1] {removed "<script>alert(1)</script>"} [added 1] {added "<script>alert(2)</script>"}"`;

exports[`rendered output > unified > a modified line word-diffs against its counterpart 1`] = `
"[removed] {removed "const greeting = \\"Hello\\";" <kwd oper str str.modified str>}
[added 1] {added "const greeting = \\"Goodbye\\";" <kwd oper str str.modified str>}"
`;

exports[`rendered output > unified > a multi-line replacement expands to the longer side 1`] = `
"[removed] {removed "one" <modified>}
[removed] {removed "two"}
[removed] {removed "three"}
[added 1] {added "ONE" <modified>}"
`;

exports[`rendered output > unified > a removal pads the other side 1`] = `
"[equal 1] {equal "a"}
[removed] {removed "b"}"
`;

exports[`rendered output > unified > an addition pads the other side 1`] = `
"[equal 1] {equal "a"}
[added 2] {added "b"}"
`;

exports[`rendered output > unified > collapsed runs are marked with a hunk header 1`] = `
"[fold] {hunk @@ -1,9 +1,9 @@}
[removed] {removed "OLD" <modified>}
[added 10] {added "NEW" <modified>}"
`;

exports[`rendered output > unified > collapsed runs are marked with dots 1`] = `
"[fold] {fold —}
[removed] {removed "OLD" <modified>}
[added 10] {added "NEW" <modified>}"
`;

exports[`rendered output > unified > identical input still renders every line 1`] = `
"[equal 1] {equal "a"}
[equal 2] {equal "b"}"
`;

exports[`rendered output > unified > markup in content is escaped, not rendered 1`] = `
"[removed] {removed "<script>alert(1)</script>"}
[added 1] {added "<script>alert(2)</script>"}"
`;
